--- a/project.html
+++ b/project.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>TechStack</title>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="project.css">
         <link rel="icon" href='./images/favicon.png'
     </head>
     <body>
